# mmd

./: .gitattributes  .gitignore  AGENTS.md  DESIGN.md  README.md  ROADMAP.md  UI-skin.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: platform-ci.yml  release.yml
docs/: releasing.md
scripts/: check-release-version.mjs  check-release-version.test.mjs  docx-real-integration.test.mjs  excalidraw-assets.mjs  excalidraw-assets.test.mjs  pdf-assets.mjs  pdf-assets.test.mjs  release-workflow.node-test.mjs  sync-pdf-assets.mjs  sync-third-party-notices.mjs  third-party-notices.test.mjs
scripts/ci/: artifact-manifest.mjs  artifact-manifest.test.mjs  smoke-linux.node-test.mjs  smoke-linux.sh  smoke-macos.node-test.mjs  smoke-macos.sh  smoke-windows.ps1
src/: App.media.test.tsx  App.outline.test.tsx  App.pdf.test.tsx  App.tsx  bootstrap.ts  main.tsx  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: active_document_watch.rs  commands.rs  docx_preflight.rs  excalidraw_scene.rs  html_preview_server.rs  image_resolver.rs  lib.rs  main.rs  markdown_files.rs  models.rs  native_menu.rs  path_auth.rs  recent_files.rs  state.rs  workspace_file_kind.rs  workspace_session.rs  workspace_snapshot.rs
src/components/: AdaptiveMarkdownImage.test.tsx  AdaptiveMarkdownImage.tsx  AppToolbar.tsx  DocxPreview.test.tsx  DocxPreview.tsx  EditorPane.test.tsx  EditorPane.tsx  ExcalidrawPane.test.tsx  ExcalidrawPane.tsx  (+36 more)
(+148 files in other folders)
